// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"favicon" option 1`] = `""Build Info" has not been initialized yet"`;

exports[`"favicon" option 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            <link rel="shortcut icon" href="/favicon.ico">
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYxUWjqAD1tzQPKdrKVdDqCjwaVAKt+8DxnCAqRHs730O7P1Ec2l3We2hAyNeLsw0SCtL9X3fqnaxUuuUBnWbmpOJXhE5FHm1e08Zf4Yzqz6RmhVsRuL7ckzWAB0pGcil6aLdYsYcrWdE4vCSr6R8kKxs/U6dqZ9qpbbdz6I1Me+blbiyICtjrz3EMOIMAytaaM4ad6VYYFuFb46DM8DovbIzATGZ24cREwC1hCF/nndHsI/Sh39110v9PmUzeyfST1ARG4taD7LMT4AgkTLvM7axA9j7x6EYV2DnowpT01j1wy9ya/3kqXW8o2cvXBY/j6C1R+tJRXMdM2nkA3Zct2B">
          </head>
          <body>
            
            <div id="react-view"></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`"favicon" option 3`] = `200`;

exports[`Base rendering of HTML template 1`] = `""Build Info" has not been initialized yet"`;

exports[`Base rendering of HTML template 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYxUWjqAD1tzQPKdrKVdDqCjwaVAKt+8DxnCAqRHs730O7P1Ec2l3We2hAyNeLsw0SCtL9X3fqnaxUuuUBnWbmpOJXhE5FHm1e08Zf4Yzqz6RmhVsRuL7ckzWAB0pGcil6aLdYsYcrWdE4vCSr6R8kKxs/U6dqZ9qpbbdz6I1Me+blbiyICtjrz3EMOIMAytaaM4ad6VYYFuFb46DM8DovbIzATGZ24cREwC1hCF/nndHsI/Sh39110v9PmUzeyfST1ARG4taD7LMT4AgkTLvM7axA9j7x6EYV2DnowpT01j1wy9ya/3kqXW8o2cvXBY/j6C1R+tJRXMdM2nkA3Zct2B">
          </head>
          <body>
            
            <div id="react-view"></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Base rendering of HTML template 3`] = `200`;

exports[`Config overriding for injection 1`] = `""Build Info" has not been initialized yet"`;

exports[`Config overriding for injection 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYxUWjqAD1tzQPKdrKVdDqCjwaVAKt+8DxnCAqRHs730O7P1Ec2l3We2hAyNeLsw0SCtL9X3fqnaxUuuUBnWbmpOJXhE5FHm1e08Zf4Yzqz6RmhVsRuL7ckzWAB0pGcil6aLdYsYcrWdE4vCSr6R8kKxs/U6dqZ9qpbbdz6I1Me+blbiyICtjrz3EMOIMAytaaM4ad6VYYFuFb46DM8DovbIzATGZ24cREwC1hCF/nndHsI/Sh39110v9PmUzeyfST1ARG4taD7LMT4AgkTLvM7axA9j7x6EYV2DnowpT01j19w2yd70UBconyNW7KrVq+rYeZGETta5kdIwbAo5GTq4JSXhasx2q8uiuo75QpeEAEUFoUZxnvLNKPzlmsBTnUc=">
          </head>
          <body>
            
            <div id="react-view"></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Config overriding for injection 3`] = `200`;

exports[`Helmet integration works 1`] = `""Build Info" has not been initialized yet"`;

exports[`Helmet integration works 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Test Page Title</title>
            <meta data-rh="true" content="Test Page Description" property="description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            <link data-rh="true" href="https://github.com/birdofpreyru/react-utils" rel="canonical"/><link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYxUWjqAD1tzQPKdrKVdDqCjwaVAKt+8DxnCAqRHs730O7P1Ec2l3We2hAyNeLsw0SCtL9X3fqnaxUuuUBnWbmpOJXhE5FHm1e08Zf4Yzqz6RmhVsRuL7ckzWAB0pGcil6aLdYsYcrWdE4vCSr6R8kKxs/U6dqZ9qpbbdz6I1Me+blbiyICtjrz3EMOIMAytaaM4ad6VYYFuFb46DM8DovbIzATGZ24cREwC1hCF/nndHsI/Sh39110v9PmUzeyfST1ARG4taD7LMT4AgkTLvM7axA9j7x6EYV2DnowpT01j1wy9ya/3kqXW8o2cvXBY/j6C1R+tJRXMdM2nkA3Zct2B">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p><p>Goodbye World!</p></div></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Helmet integration works 3`] = `200`;

exports[`Injection of additional JS scripts 1`] = `""Build Info" has not been initialized yet"`;

exports[`Injection of additional JS scripts 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            <script>1-st script after opening <head></script><script>2-nd script after opening <head></script>
            
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYxUWjqAD1tzQPKdrKVdDqCjwaVAKt+8DxnCAqRHs730O7P1Ec2l3We2hAyNeLsw0SCtL9X3fqnaxUuuUBnWbmpOJXhE5FHm1e08Zf4Yzqz6RmhVsRuL7ckzWAB0pGcil6aLdYsYcrWdE4vCSr6R8kKxs/U6dqZ9qpbbdz6I1Me+blbiyICtjrz3EMOIMAytaaM4ad6VYYFuFb46DM8DovbIzATGZ24cREwC1hCF/nndHsI/Sh39110v9PmUzeyfST1ARG4taD7LMT4AgkTLvM7axA9j7x6EYV2DnowpT01j1wy9ya/3kqXW8o2cvXBY/j6C1R+tJRXMdM2nkA3Zct2B">
          </head>
          <body>
            <script>1-st script after opening <body></script><script>2-nd script after opening <body></script>
            <div id="react-view"></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            <script>Dummy JS Sript</script><script>Another Dummy JS Script</script><script>Yet another Dummy JS Script</script>
          </body>
        </html>"
`;

exports[`Injection of additional JS scripts 3`] = `200`;

exports[`JS constructs in global state 1`] = `""Build Info" has not been initialized yet"`;

exports[`JS constructs in global state 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true"></title>
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYxUWjqAD1tzQPKdrKVdDqCjwaVAKt+8DxnCAqRHs730O7P1Ec2l3We2hAyNeLsw0SCtL9X3fqnaxUuuUBnWbmpOJXhE5FHm1e08Zf4Yzqz6RmhVsRuL7ckzWAB0pGcil6aLdYsYcrWdE4vCSr6R8kKxs/U6dqZ9qpbbdz6I1Me+blbiyICtjrz3EMOIMAytaaM4ad6VYYFuFb46DM8DovbIzATGZ24cREwC1hCF/nndHsI/Sh39110v9PmUzeyfST1ARG4taD7LMT4AgkTLvM7axA9j7x6EYV2DnowpT01j12ygmrdm5mNve9FOLO1zabk41ouAjMH9zGehA0pb0v1xBqFIVaMYCBrL/Ongr1RaORnkWq5GKcNeSlqEvTqY8+5RvS52TY1yKJoGk2XIpRo1XCeo1wiX2EY8kKRv/mis3eb+um/Kjp7H2u1d4ddmrtc=">
          </head>
          <body>
            
            <div id="react-view"><div>{&quot;test&quot;:Array.prototype.slice.call({&quot;1&quot;:&quot;defaultValue&quot;,&quot;length&quot;:2}),&quot;set&quot;:new Set([1,2])}</div></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`JS constructs in global state 3`] = `200`;

exports[`Server-side rendering (SSR); injection of CSS chunks & Redux state 1`] = `""Build Info" has not been initialized yet"`;

exports[`Server-side rendering (SSR); injection of CSS chunks & Redux state 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true"></title>
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet"><link href="/test/public/path/test-chunk-a-1511941200000.css" rel="stylesheet"><link href="/test/public/path/test-chunk-b-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYxUWjqAD1tzQPKdrKVdDqCjwaVAKt+8DxnCAqRHs730O7P1Ec2l3We2hAyNeLsw0SCtL9X3fqnaxUuuUBnWbmpOJXhE5FHm1e08Zf4Yzqz6RmhVsRuL7ckzWAB0pGcil6aLdYsYcrWdE4vCSr6R8kKxs/U6dqZ9qpbbdz6I1Me+blbiyICtjrz3EMOIMAytaaM4ad6VYYFuFb46DM8DovbIzATGZ24cREwC1hCF/nndHsI/Sh39110v9PmUzeyfST1ARG4taD7LMT4AgkTLvM7axA9j7x6EYV2DnowpT01j1zebb7szNNYxFI57U1DKgUwnDN/DpaBWq7DJfBTohs4kb0PnSQQdYzyg69/S6gNLRPxSY32DgHOjtl+Yk3Ef87Yas7wA7/ehMTj8Q+0otQxu">
          </head>
          <body>
            
            <div id="react-view"><div>Hello Wold!</div></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script><script src="/test/public/path/test-chunk-b-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Server-side rendering (SSR); injection of CSS chunks & Redux state 3`] = `200`;

exports[`Setting of response HTTP status the server-side rendering 1`] = `""Build Info" has not been initialized yet"`;

exports[`Setting of response HTTP status the server-side rendering 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true"></title>
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="AAECAwQFBgcICQABAgMEBYrGXlTTXYBVlkFd0kmziYxUWjqAD1tzQPKdrKVdDqCjwaVAKt+8DxnCAqRHs730O7P1Ec2l3We2hAyNeLsw0SCtL9X3fqnaxUuuUBnWbmpOJXhE5FHm1e08Zf4Yzqz6RmhVsRuL7ckzWAB0pGcil6aLdYsYcrWdE4vCSr6R8kKxs/U6dqZ9qpbbdz6I1Me+blbiyICtjrz3EMOIMAytaaM4ad6VYYFuFb46DM8DovbIzATGZ24cREwC1hCF/nndHsI/Sh39110v9PmUzeyfST1ARG4taD7LMT4AgkTLvM7axA9j7x6EYV2DnowpT01j1wy9ya/3kqXW8o2cvXBY/j6C1R+tJRXMdM2nkA3Zct2B">
          </head>
          <body>
            
            <div id="react-view"><div>404 Error Test</div></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Setting of response HTTP status the server-side rendering 3`] = `404`;

exports[`Throws in case of forge.random.getBytes(..) failure 1`] = `""Build Info" has not been initialized yet"`;

exports[`Throws in case of forge.random.getBytes(..) failure 2`] = `[Error: Emulated Failure of forge.random.getBytes(..)]`;

exports[`Throws in case of forge.random.getBytes(..) failure 3`] = `""`;

exports[`Throws in case of forge.random.getBytes(..) failure 4`] = `200`;
